Correction réseaux sociaux/ contraste

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -7796,7 +7796,10 @@ button.close {
 .center-block {
     display: block;
     margin-right: auto;
-    margin-left: auto
+    margin-left: auto;
+    width: 100px;
+    height: 100px;
+    
 }
 
 .pull-right {
